objects/AZGives_Donor__c.object
<CustomObject>
    <description>Object to upload donors from Arizona Gives Day campaign.</description>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Donation Amount</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anonymous__c</fullName>
        <label>Anonymous</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Fees_Txt__c</fullName>
        <description>did the donor cover the fees of the transaction?</description>
        <label>Cover Fees Txt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Fees__c</fullName>
        <label>Cover Fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Memory__c</fullName>
        <label>In Memory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>the email matched, but the names didn&apos;t the donation hasn&apos;t been entered into the contact&apos;s record</description>
        <label>Matched Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Donor wasn&apos;t found in SF</description>
        <label>Not Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The contact has been found and the donation has been credited to it.</description>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Designation__c</fullName>
        <description>The program where this donation is to be assigned.</description>
        <inlineHelpText>The program where this donation is to be assigned.</inlineHelpText>
        <label>Program Designation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_Time__c</fullName>
        <description>transaction date and time</description>
        <label>Transaction Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>AZGives_Donor</label>
    <listViews>
        <fullName>matched_email</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Not_Found__c</columns>
        <columns>Matched_Email__c</columns>
        <columns>Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Matched_Email__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>matched email</label>
    </listViews>
    <nameField>
        <displayFormat>AZD-{0000}</displayFormat>
        <label>AZGives_Donor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AZGives_Donors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>